--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,10 @@ owner: ditchthis # Your GitHub organization or username, where this repository l
 repo: upptime-monitoring # The name of this repository
 
 sites:
-  - name: DitchCarbon
+  - name: DitchCarbon Website
     url: https://ditchcarbon.com/
+  - name: DitchCarbon Portal
+    url: https://portal.ditchcarbon.com/
   - name: DitchCarbon Docs
     url: https://docs.ditchcarbon.com/
   - name: DitchCarbon API
