--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,13 +3,13 @@ owner: ditchthis # Your GitHub organization or username, where this repository l
 repo: upptime-monitoring # The name of this repository
 
 sites:
-  - name: DitchCarbon Website
+  - name: Website
     url: https://ditchcarbon.com/
-  - name: DitchCarbon Portal
+  - name: Client Portal
     url: https://portal.ditchcarbon.com/
-  - name: DitchCarbon Docs
+  - name: API Docs
     url: https://docs.ditchcarbon.com/
-  - name: DitchCarbon API
+  - name: API
     url: https://api.ditchcarbon.com/industries
     headers:
       - "Authorization: Bearer $DC_API_KEY"
