--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -11,7 +11,7 @@ sites:
     url: https://docs.ditchcarbon.com/
   - name: API
     url: https://api.ditchcarbon.com/organizations/227765
-    __dangerous__body_degraded_if_text_missing: 'this is a test'
+    __dangerous__body_degraded_if_text_missing: '"total": 13400000000.0,'
     headers:
       - "Authorization: Bearer $DC_API_KEY"
       - "Content-Type: application/json"
